# sdev-autoresearch

./: .gitignore  README.md  build_and_upload.sh  development.md  pyproject.toml  test.md
.github/workflows/: ci.yml
sdev/: __init__.py  __main__.py
tests/: test_adversarial_ansi.py  test_adversarial_api_edge.py  test_adversarial_grep.py  test_adversarial_grep_linebyline.py  test_adversarial_interrupt.py  test_adversarial_module_api.py  test_adversarial_new_features.py  test_adversarial_run_connect.py  test_adversarial_serial_error.py  test_adversarial_strip.py  test_adversarial_timeout.py  test_cli_integration.py  test_doctor_silence.py  test_doctor_wait_silence.py  test_endflag_linemode.py  test_error_handling.py  test_probe.py  test_resource_usage.py  test_sdev.py  test_serial_lock.py  test_write.py  test_xc01_real.py
