[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sdev"
version = "0.1.0"
description = "Small toolkit for automating a serial-attached Linux shell"
requires-python = ">=3.10"
dependencies = ["pyserial"]

[project.scripts]
sdev = "sdev.__main__:main"
