[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdev"
version = "1.0.0"
description = "Small toolkit for automating a serial-attached Linux shell"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "klrc", email = "1440698245@qq.com" },
]
keywords = ["serial", "shell", "embedded", "cli", "linux", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Terminals :: Serial",
]
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/klrc/sdev-autoresearch"
Repository = "https://github.com/klrc/sdev-autoresearch"
"Bug Tracker" = "https://github.com/klrc/sdev-autoresearch/issues"

[project.scripts]
sdev = "sdev.__main__:main"
